# 20A202600108-LeTrungAnhQuoc-Day7

./: chunkcompare.py  main.py  plan.md  pyproject.toml  requirements.txt  verify_similarity.py
data/wiki_docs/: Engineering_Marimo_Recipes.txt  Engineering_RAG_Chatbot_Blog.txt  Engineering_llmware_Docs.txt  Gaming_Bullet_Kin.txt  General_Impact_Prioritization.txt  General_Underground_Travel.txt  Legal_EU_AI_Act.txt
report/: REPORT.md
src/: __init__.py  agent.py  chunking.py  embeddings.py  store.py
